# poker-engine

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md
include/AI/: BaselineStrategies.hpp  BayesianTracker.hpp  BotFactory.hpp  CompositeBot.hpp  InferenceEngine.hpp  Range.hpp  RangeParser.hpp  StrategyInterfaces.hpp
include/BayesianInference/: BayesianTracker.hpp  InferenceEngine.hpp  Range.hpp  RangeParser.hpp
include/BotProfiles/: BaselineStrategies.hpp  BotFactory.hpp  BotRegistry.hpp  CompositeBot.hpp  StrategyInterfaces.hpp
include/Core/: Bitboard.hpp  Types.hpp
include/CoreEngine/: Bitboard.hpp  GameState.hpp  IGameRules.hpp  Logger.hpp  Session.hpp  TournamentArchitecture.hpp  Types.hpp  VariantRegistry.hpp
include/CoreEngine/Variants/: DeuceToSevenTripleDraw.hpp  FiveCardDraw.hpp  Omaha.hpp  Razz.hpp  SevenCardStud.hpp  ShortDeck.hpp  TexasHoldem.hpp
include/Engine/: Analyzer.hpp  EvaluatorCore.hpp  GameState.hpp  Session.hpp  TournamentArchitecture.hpp
include/Games/: DeuceToSevenTripleDraw.hpp  FiveCardDraw.hpp  Omaha.hpp  Razz.hpp  SevenCardStud.hpp  ShortDeck.hpp  TexasHoldem.hpp
include/HandEvaluator/: EvaluatorCore.hpp  PerfectHashEvaluator.hpp  PreflopHeuristics.hpp
include/Interfaces/: IGameRules.hpp
include/MonteCarloSimulator/: Analyzer.hpp
src/: main.cpp
src/AI/: BaselineStrategies.cpp  BayesianTracker.cpp  BotFactory.cpp  CompositeBot.cpp  InferenceEngine.cpp  Range.cpp  RangeParser.cpp
src/BayesianInference/: BayesianTracker.cpp  InferenceEngine.cpp  Range.cpp  RangeParser.cpp
src/BotProfiles/: BaselineStrategies.cpp  BotFactory.cpp  CompositeBot.cpp
src/CoreEngine/: GameState.cpp  Logger.cpp  Session.cpp  TournamentArchitecture.cpp
src/CoreEngine/Variants/: DeuceToSevenTripleDraw.cpp  FiveCardDraw.cpp  Omaha.cpp  Razz.cpp  SevenCardStud.cpp  ShortDeck.cpp  TexasHoldem.cpp
src/Engine/: Analyzer.cpp  EvaluatorCore.cpp  GameState.cpp  Session.cpp  TournamentArchitecture.cpp
src/Games/: DeuceToSevenTripleDraw.cpp  FiveCardDraw.cpp  Omaha.cpp  Razz.cpp  SevenCardStud.cpp  ShortDeck.cpp  TexasHoldem.cpp
src/HandEvaluator/: EvaluatorCore.cpp  PerfectHashEvaluator.cpp  PreflopHeuristics.cpp
src/MonteCarloSimulator/: Analyzer.cpp
tools/: run_tournament.cpp  test_simulation.cpp
